--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>titulo de nuestro documento</h1>
     <h2>Titulo de nuestro documento más pequeño</h2>
+    <h3>Más pequeño</h3>
+    <h4>Más pequeño</h4>
 </body>
 </html>
