--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML SIMPLE</title>
 </head>
+
 <body>
-    <h1>titulo de nuestro documento</h1>
-    <h2>Titulo de nuestro documento más pequeño</h2>
-    <h3>Más pequeño</h3>
-    <h4>Más pequeño</h4>
-</body>
+    <!--h1 se utiliza para titulares--> 
+    <h1>Título de nuestro documento</h1>
+    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <strong>Quibusdam</strong>, consectetur neque laudantium et ipsum voluptate ipsa blanditiis placeat natus <i>architecto officiis dolor</i>, sed aspernatur at incidunt ea reiciendis doloremque quis.</p>
+    <hr/>
+    <h2>Subtitulo articulo</h2>
+
+    <p>
+        <blockquote>ipsum dolor sit amet, consectetur adipisicing elit. Consectetur totam adipisci nemo ipsam. Explicabo libero nulla molestias ad enim doloribus. Voluptatibus eveniet adipisci cumque nemo explicabo. Autem laudantium animi repellat?
+        </blockquote> <cite>Alejandro García Yepes</cite>
+    </p>
+
+
 </html>
