--- a/index.html
+++ b/index.html
@@ -1,29 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8" name="description"content="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />
-    <title>GeekCommunity</title>
-
-    <link rel="stylesheet" type="text/css" href="css/estilos.css">
-    <link rel="stylesheet" type="text/css" href="css/estilos.css" media="screen" />
-  </head>
-  <body>
-      <h1>Titulo de nuestro sitio</h1>
-
-      <a href="https://nosbyte.eu">Hola Mundo</a>
-      <a href="#">Hola mundo #2</a>
-      <a href="#">Hola mundo 3</a>
-      <a href="#">Hola mundo 4</a>
-      <a href="#">Hola mundo 5</a>
-
-      <div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas neque maiores voluptatibus ut, quasi non? Tenetur odio, sapiente, illum enim ea id perspiciatis doloribus pariatur, maxime mollitia molestias expedita quasi!</p>
-      </div>
-
-      <div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio expedita tempora quidem tempore, nam optio fuga consectetur, eius facere, eligendi voluptatum molestias pariatur culpa, blanditiis. Molestiae libero, labore rem accusamus.</p>
-      </div>
-
-
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <p>Creación del index</p>
+</body>
 </html>
