--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Creación del index</p>
+    <p>Creación del index actualizado</p>
 </body>
 </html>
