--- a/holamundo.html
+++ b/holamundo.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Test</title>
 </head>
 <body>
-    <p>Creación del index actualizado</p>
+    <h1>Test</h1>
+    <!--Nota: H1 agrega un encabezado-->
 </body>
 </html>
