--- a/etiquetasmeta.html
+++ b/etiquetasmeta.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="diseño web, codigo, programacion, html, css, javascript, tutoriales">
     <meta name="description" content="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, est?">
+    <meta name="author" content="Alejandro Garcia">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EtiquetasMeta</title>
 </head>
 <body>
